added scroll to top functionality to sticky button

--- a/index.html
+++ b/index.html
@@ -169,5 +169,6 @@
       </div>
     </div>
     <button class = "add-prompt-button">Add Entry</button>
+    <script src = "scripts.js"></script>
   </body>
 </html>
