Changed website title

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="main">
-      <h1 class="title">Your's Journal 450px width</h1>
+      <h1 class="title">Gratitude Journal</h1>
       <div class="create-entry-title">
         <h4 id="call-action">Create An Entry</h4>
         <p id="prompt">What are you grateful for?</p>
