Changed width of cards

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1 class="title">Gratitude Journal</h1>
         <div class="create-entry-title">
           <h4 id="call-action">Create An Entry</h4>
-          <p id="prompt">What are you grateful for?</p>
+          <p id="prompt"></p>
         </div>
         <div class="change-button">
           <button id="change-prompt">Change prompt</button>
