--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
       </div>
       <button class="add-prompt-button">Add Entry</button>
     </main>
+    <footer>
+      <p id = "footer-text">Created by: Jeremiah Ramiscal</p>
+        <a href = "https://github.com/heyitsjearbear/gratitude-journal"><img id = "github-img" src = "githubImg.png"></a>
+    </footer>
     <script src="scripts.js"></script>
   </body>
 </html>
